tests/ui/macros/metavar-expressions/concat-repetitions.stderr
error: invalid syntax
  --> $DIR/concat-repetitions.rs:14:20
   |
LL |             const ${concat($a, Z)}: i32 = 3;
   |                    ^^^^^^^^^^^^^^^

error: invalid syntax
  --> $DIR/concat-repetitions.rs:22:17
   |
LL |         read::<${concat($t, $en)}>()
   |                 ^^^^^^^^^^^^^^^^^

error: invalid syntax
  --> $DIR/concat-repetitions.rs:22:17
   |
LL |         read::<${concat($t, $en)}>()
   |                 ^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

